--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "braces": ">=2.3.1",
+    "dockerode": "^3.0.2",
     "dotenv": "^8.1.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0"
   }
 }
