--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "@kubernetes/client-node": "^0.11.0",
     "axios": "^0.19.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
